syntax = "proto3";

package didcomm.messaging;

option csharp_namespace = "DIDComm.Messaging";
option go_package = "didcomm.org/messaging";
option java_package = "DIDComm.Messaging.Proto";
option java_outer_classname="BasicMsg";

message BasicMessage {
    string text = 1;
}
